--- a/FE/front/src/pages/MiniGamePage.css
+++ b/FE/front/src/pages/MiniGamePage.css
@@ -1,12 +1,12 @@
 .minigame {
   /* border: 1px black solid; */
   width: 100%;
-  height: 80%;
+  height: 100%;
 }
 
 .minigame-Headline {
   font-family: galmuri9;
-  margin-top: 20%;
+  margin-top: 10%;
 }
 .minigame-cal-timer {
   font-family: galmuri9;
@@ -20,52 +20,70 @@
 .minigame-cal-currentmoney {
   font-size: 130%;
   border-bottom: 1px black solid;
+  text-align: right;
   font-family: galmuri9;
-  width: 80%;
+  width: 70%;
   margin-left: 10%;
+}
+
+.minigame-cal-currentfood {
+  margin-left: 30%;
+  text-align: right;
+  margin-bottom: 1%;
+  width: 70%;
+  /* border: 1px solid black; */
 }
 .minigame-cal-money-value {
   font-size: 130%;
   /* border: 1px black solid; */
-  top: 10%;
   font-family: galmuri9;
-  /* width: 80%; */
-  /* margin-left: 10%; */
+  text-align: right;
+  width: 60%;
+  margin-left: 20%;
 }
 .minigame-select {
-  margin-top: 3%;
-  /* border: 1px black solid; */
+  /* border: 1px purple solid; */
+  margin-top: -10%;
   display: flex;
   width: 100%;
-  height: 17.5%;
+  height: 20%;
 }
 
 .minigame-select-number {
-  margin-left: 1%;
-  width: 79%;
-  /* border: 1px black solid; */
+  width: 100%;
+  /* border: 1px blue solid; */
 }
 
 .minigame-btn {
   background-color: white;
-  margin-left: 1.5%;
-  margin-bottom: 1%;
+  margin-bottom: 0.5%;
   font-family: galmuri9;
-  width: 18%;
-  padding-top: 3%;
-  padding-bottom: 4%;
+  width: 20%;
+  padding-top: 5%;
+  padding-bottom: 5%;
   border-radius: 10%;
-  font-size: 130%;
+  font-size: 160%;
+}
+.minigame-select-submit {
+  /* border: 1px purple solid; */
+  display: flex;
+  width: 100%;
+  height: 10%;
+  margin-top: 0.7%;
 }
 
 .minigame-submit {
-  /* border: 1px black solid; */
+  /* border: 1px red solid; */
   background-color: white;
-  margin-left: 0%;
-  margin-right: 2%;
-  width: 20%;
+  width: 50%;
   height: 100%;
-  /* padding-top: 2%; */
+}
+.minigame-clear-btn {
+  background-color: white;
+  font-family: galmuri9;
+  width: 50%;
+  border-radius: 7%;
+  font-size: 130%;
 }
 .minigame-submit-btn {
   /* border: 1px black solid; */
@@ -75,8 +93,7 @@
   width: 100%;
   height: 100%;
   font-size: 120%;
-  /* padding-top: 2%; */
-  border-radius: 10%;
+  border-radius: 7%;
 }
 
 .minigame-pixelart-crab {
@@ -88,10 +105,12 @@
 }
 .minigame-pixelart-metamong {
   background-image: url(../asset/image/pixelartMetamong.gif);
-  margin-left: 20%;
-  margin-top: 20%;
-  background-size: 70%;
-  height: 60%;
-  background-repeat: no-repeat;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 10%;
+  background-size: 34%;
+  height: 13%;
+  /* background-repeat: no-repeat; */
+  background-position: center;
   /* border: 1px black solid; */
 }
