--- a/FE/front/src/pages/ReceiptPage.css
+++ b/FE/front/src/pages/ReceiptPage.css
@@ -1,19 +1,23 @@
-.receiptPage {
-  /* border: 1px black solid; */
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  /* border: 1px black solid; */
-}
 .receipt {
-  margin-top: 20%;
+  margin-top: 10%;
+  margin-left: -10%;
   height: 80%;
   width: 100%;
   /* border: 1px black solid; */
-  background-image: url(../asset/image/receipt.png);
-  background-size: 100%;
-  background-repeat: no-repeat;
+
+  background-image: url(../asset/image/receipt.gif);
+  background-size: 160%;
+  background-position: 35% 90%;
+  /* background-repeat: no-repeat; */
+}
+.receipt-whiteblock {
+  /* border: 1px solid black; */
+  position: absolute;
+  width: 100%;
+  height: 8%;
+  top: 0%;
+  background-color: white;
+  z-index: 1002;
 }
 .receipt-Img {
   height: 100%;
@@ -23,33 +27,49 @@
 .receipt-text {
   /* border: 1px black solid; */
   height: 100%;
+  width: 100%;
+  animation: moveReceipt 0.99s linear alternate;
 }
+@keyframes moveReceipt {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
+}
+
 .receipt-text-header {
   margin-top: 15%;
   /* border: 1px blue solid; */
-  font-size: 200%;
-  width: 100%;
+  font-size: 150%;
+  margin-left: 30%;
+  width: 80%;
+  height: 5%;
   margin-bottom: 4%;
 }
 .receipt-text-main {
   /* border: 1px blue solid; */
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: right;
+  width: 50%;
+  margin-left: 37%;
+  /* flex-wrap: wrap; */
 }
 .receipt-text-main-left {
   /* border: 1px red solid; */
   margin-top: 1%;
-  margin-bottom: 1%;
-  width: 20%;
-  font-size: 110%;
+  margin-bottom: 0.5%;
+  /* width: 20%; */
+  font-size: 120%;
   /* justify-content: space-around; */
   margin-left: 18%;
 }
 .receipt-text-main-right {
   /* border: 1px red solid; */
   margin-top: 1%;
-  margin-bottom: 1%;
-  width: 39%;
+  margin-bottom: 5%;
   font-size: 100%;
   /* justify-content: space-around; */
   margin-left: 0%;
@@ -58,7 +78,9 @@
 
 .receipt-text-footer {
   /* border: 1px blue solid; */
-  margin-top: 20%;
+  margin-left: 42%;
+  width: 60%;
+  margin-top: 12%;
   font-size: 110%;
 }
 
@@ -66,7 +88,7 @@
   /* border: 1px red solid; */
   margin-top: 4%;
   margin-bottom: 1%;
-  width: 20%;
+  /* width: 20%; */
   /* justify-content: space-around; */
   margin-left: 18%;
   font-size: 150%;
@@ -74,9 +96,9 @@
 
 .receipt-text-main-total2 {
   /* border: 1px red solid; */
-  margin-top: 3%;
+  margin-top: 0%;
   margin-bottom: 1%;
-  width: 39%;
+  /* width: 39%; */
   /* justify-content: space-around; */
   font-size: 120%;
   margin-left: 0%;
