Feat: pvp 분기 및 시간 계산 완료

--- a/FE/front/src/components/battle/battleDialog.css
+++ b/FE/front/src/components/battle/battleDialog.css
@@ -26,6 +26,14 @@
   font-family: galmuri9;
   font-size: large;
 }
+.battle-dialog-start {
+  /* border: 1px black solid; */
+}
+
+.battle-dialog-run {
+  /* border: 1px black solid; */
+}
+
 .battle-dialog-timer {
   /* border: 1px solid black; */
   position: absolute;
