--- a/FE/front/src/pages/ReceiptPage.css
+++ b/FE/front/src/pages/ReceiptPage.css
@@ -1,22 +1,50 @@
 .receipt {
-  margin-top: 10%;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #abaaa7;
+  background-color: #abaaa7;
+}
+
+.receipt-backimg {
+  margin-top: 20%;
   margin-left: -10%;
-  height: 80%;
+  height: 90%;
   width: 100%;
   /* border: 1px black solid; */
 
-  background-image: url(../asset/image/receipt.gif);
-  background-size: 160%;
+  background-image: url(../asset/image/receiptBackground.png);
+  background-size: 180%;
   background-position: 35% 90%;
   /* background-repeat: no-repeat; */
+}
+.receipt-ticket {
+  /* border: 1px solid black; */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 10.5%;
+  top: 4.5%;
+  background-image: url(../asset/image/receipt.png);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  z-index: 998;
+  animation: moveReceipt 1.2s linear alternate;
+}
+@keyframes moveReceipt {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
 }
 .receipt-whiteblock {
   /* border: 1px solid black; */
   position: absolute;
   width: 100%;
-  height: 8%;
-  top: 0%;
-  background-color: white;
+  height: 11%;
+  top: 89.5%;
+  background-color: #abaaa7;
   z-index: 1002;
 }
 .receipt-Img {
@@ -26,15 +54,17 @@
 
 .receipt-text {
   /* border: 1px black solid; */
-  height: 100%;
-  width: 100%;
-  animation: moveReceipt 0.99s linear alternate;
+  position: relative;
+  height: 90%;
+  width: 75%;
+  animation: moveText 1.2s linear alternate;
+  z-index: 1001;
 }
-@keyframes moveReceipt {
-  from {
-    transform: translateY(-100%);
+@keyframes moveText {
+  0% {
+    transform: translateY(12%);
   }
-  to {
+  100% {
     transform: translateY(0%);
   }
 }
@@ -54,15 +84,16 @@
   flex-direction: column;
   text-align: right;
   width: 50%;
-  margin-left: 37%;
+  margin-top: 20%;
+  margin-left: 40%;
   /* flex-wrap: wrap; */
 }
 .receipt-text-main-left {
   /* border: 1px red solid; */
   margin-top: 1%;
-  margin-bottom: 0.5%;
+  margin-bottom: 4%;
   /* width: 20%; */
-  font-size: 120%;
+  font-size: 150%;
   /* justify-content: space-around; */
   margin-left: 18%;
 }
@@ -70,7 +101,7 @@
   /* border: 1px red solid; */
   margin-top: 1%;
   margin-bottom: 5%;
-  font-size: 100%;
+  font-size: 120%;
   /* justify-content: space-around; */
   margin-left: 0%;
   text-align: right;
@@ -81,7 +112,7 @@
   margin-left: 42%;
   width: 60%;
   margin-top: 12%;
-  font-size: 110%;
+  font-size: 150%;
 }
 
 .receipt-text-main-total1 {
