Feat: 노선도 정렬구분추가, ui

--- a/FE/front/src/pages/MySubwayPage.css
+++ b/FE/front/src/pages/MySubwayPage.css
@@ -14,7 +14,7 @@
 .my-title {
   background: #f3d9d9;
   display: flex;
-  justify-content:center;
+  justify-content: space-between;
   padding: 3vw;
   box-shadow: 3px 3px 3px 3px gray;
 }
@@ -88,4 +88,36 @@
   box-sizing: border-box;
   height: 100%;
   width: 100%;
+}
+
+.my-scroll-div {
+  height: 670%;
+  overflow: scroll;
+}
+
+select {
+  display: inline-block; /* 추가 */
+  text-align: center; /* 추가 */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: #f5f5f5;
+  border: none;
+  border-radius: 4px;
+  padding: 8px;
+  font-size: 16px;
+  color: #333;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: 40px;
+  width: 36%;
+}
+
+select:hover,
+select:focus {
+  background-color: #e0e0e0;
+}
+
+select option {
+  background-color: #fff;
+  color: #333;
 }
