--- a/FE/front/src/pages/HotSubwayPage.css
+++ b/FE/front/src/pages/HotSubwayPage.css
@@ -14,7 +14,7 @@
 .hot-title {
   background: #f3d9d9;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   padding: 3vw;
   box-shadow: 3px 3px 3px 3px gray;
 }
@@ -91,3 +91,4 @@
   height: 100%;
   width: 100%;
 }
+.show {display:block;}
