Feat: 특정 지하철역에 이벤트 오브젝트 등장

--- a/FE/front/src/components/mainpage/NickName.css
+++ b/FE/front/src/components/mainpage/NickName.css
@@ -19,7 +19,13 @@
   outline: none;
   border: none;
   border-bottom: solid 5px;
+  border-bottom-color: black;
   background-color: aliceblue;
+}
+
+.nickname-err-sentence{
+  color:red;
+  -webkit-text-stroke: 0.1px red;
 }
 
 .change-nickname-btn {
