Feat: result 맞힌갯수 간격, receipt 수정

--- a/FE/front/src/components/battle/battlecharacterType.css
+++ b/FE/front/src/components/battle/battlecharacterType.css
@@ -1,5 +1,5 @@
 .battleCharacter {
   transform: scale(0.4) scaleX(-1);
   /* border: 1px black solid; */
-  /* position: absolute; */
+  position: relative;
 }
