--- a/FE/front/src/components/battle/battleCharWinner.css
+++ b/FE/front/src/components/battle/battleCharWinner.css
@@ -1,7 +1,7 @@
 .battle-char-winner {
   position: relative;
-  top: -68%;
-  left: 15%;
-  transform: scale(0.3) scaleX(-1);
+  top: 20%;
+  /* left: 15%; */
+  transform: scale(0.9) scaleX(-1);
   /* border: 1px black solid; */
 }
