Feat: 지배자 확성기,강림, socket 로직 수정

--- a/FE/front/src/pages/HotSubwayPage.css
+++ b/FE/front/src/pages/HotSubwayPage.css
@@ -92,3 +92,12 @@
   width: 100%;
 }
 .show {display:block;}
+
+.hot-select {
+  font-family: galmuri9;
+}
+
+.hot-option {
+  font-family: galmuri9;
+}
+
