--- a/FE/front/src/pages/MainPage.css
+++ b/FE/front/src/pages/MainPage.css
@@ -139,7 +139,7 @@
 
 .main-router-pvp {
   position: absolute;
-  bottom: 50%;
+  bottom: 30%;
   right: 6%;
   width: 10%;
   height: 5%;
@@ -150,10 +150,10 @@
 
 .main-dominator-msg-btn {
   position: absolute;
-  bottom: 45%;
-  right: 6%;
-  width: 10%;
-  height: 5%;
+  bottom: 49%;
+  right: 4%;
+  width: 12%;
+  height: 6%;
   z-index: 1002;
 }
 
@@ -196,16 +196,39 @@
 .main-board-modal-wrap {
   display: none;
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
-  padding: 50px;
+  width: 200px;
+  padding: 100%;
   height: 400px;
   z-index: 1500;
-  color: #eeeb31;
+  color: #ee3131;
   font-size: 4rem;
   font-weight: 1000;
   font-family: "galmuri9";
-  -webkit-text-stroke: 0.5px rgb(0, 0, 0);
+  -webkit-text-stroke: 0.1px rgb(0, 0, 0);
+  animation: flicker 1s infinite;
+  animation-fill-mode: both; /* to apply the animation on the element's style */
+  animation-delay: 1s; /* to start the animation with a delay of 1s */
+  animation-direction: alternate; /* to alternate the animation direction */
+  background-color: white; /* to blur the background */
+}
+
+@keyframes flicker {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
 }
