--- a/FE/front/src/pages/MainPage.css
+++ b/FE/front/src/pages/MainPage.css
@@ -29,7 +29,7 @@
   height: 22%;
   position: absolute;
   left: 10%;
-  top: 55%;
+  bottom: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
