Feat: station디자인, 멀캠역 추가

--- a/FE/front/src/pages/HotSubwayPage.css
+++ b/FE/front/src/pages/HotSubwayPage.css
@@ -32,9 +32,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 3vw;
+  margin: 0.3vw;
+  padding-top: 1.5vw;
+  padding-bottom: 1.5vw;
   padding-left: 6vw;
   padding-right: 6vw;
+  border: solid 4px black;
+  border-radius: 10px;
+  background-color: #f3d9d9;
 }
 .hot-subject {
   font-size: large;
@@ -95,6 +100,7 @@
 
 .hot-select {
   font-family: galmuri9;
+  width: 41%;
 }
 
 .hot-option {
