Revert "Merge branch 'feature/fe-edit_UI-S08P22A304-321' into 'develop'"
This reverts merge request !136

--- a/FE/front/src/pages/MainPage.css
+++ b/FE/front/src/pages/MainPage.css
@@ -29,7 +29,7 @@
   height: 22%;
   position: absolute;
   left: 10%;
-  bottom: 20%;
+  top: 55%;
   display: flex;
   flex-direction: column;
   align-items: center;
