--- a/FE/front/src/components/mainpage/Modal.css
+++ b/FE/front/src/components/mainpage/Modal.css
@@ -1,5 +1,8 @@
 .modal-container {
-  z-index: 1200;
+  display: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 .modal-bg {
   display: block;
@@ -10,7 +13,7 @@
   left: 0;
   right: 0;
   z-index: 1200;
-  background: rgba(240, 238, 238, 0.2);
+  background: rgba(240, 238, 238, 0.5);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(2px);
   -webkit-backdrop-filter: blur(5px);
@@ -19,6 +22,9 @@
 .modal-wrap {
   display: block;
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 1500;
   border-radius: 30px;
   background-color: aliceblue;
@@ -33,10 +39,10 @@
 
 @keyframes modalAppear {
   from {
-    transform: translate(0%, 100%);
+    transform: translate(-50%, 100%);
   }
   to {
-    transform: translate(0%, 0%);
+    transform: translate(-50%, -50%);
   }
 }
 
@@ -57,7 +63,7 @@
   overflow-y: hidden;
 }
 
-/* .menu-select-list {
+.menu-select-list {
   display: flex;
   flex-direction: column;
   padding-top: 10%;
@@ -70,4 +76,4 @@
   width: 52%;
   height: 30%;
   z-index: 1500;
-} */
+}
