--- a/FE/front/src/components/mainpage/ErrorMessage.css
+++ b/FE/front/src/components/mainpage/ErrorMessage.css
@@ -1,4 +1,4 @@
-.obtain-title-modal-container {
+.error-message-container {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
@@ -6,7 +6,8 @@
   display: grid;
   grid-template-rows: 4fr 1fr;
 }
-.obtain-title-modal-content {
+
+.error-message-content {
   box-sizing: border-box;
   width: 100%;
   font-size: 1.3rem;
@@ -14,7 +15,8 @@
   flex-direction: column;
   justify-content: space-evenly;
 }
-.obtain-title-modal-info {
+
+.error-message-info {
   box-sizing: border-box;
   width: 100%;
   animation: flicker 0.7s infinite alternate;
