--- a/FE/front/src/pages/ReceiptPage.css
+++ b/FE/front/src/pages/ReceiptPage.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   border: 1px solid #abaaa7;
-  background-color: #abaaa7;
+  background-color: rgba(31, 46, 43, 1);
 }
 
 .receipt-backimg {
@@ -13,9 +13,9 @@
   /* border: 1px black solid; */
 
   background-image: url(../asset/image/receiptBackground.png);
-  background-size: 180%;
-  background-position: 35% 90%;
-  /* background-repeat: no-repeat; */
+  background-size: 195%;
+  background-position: 33.5% 90%;
+  background-repeat: no-repeat;
 }
 .receipt-ticket {
   /* border: 1px solid black; */
@@ -40,12 +40,25 @@
 }
 .receipt-whiteblock {
   /* border: 1px solid black; */
+
   position: absolute;
   width: 100%;
   height: 11%;
   top: 89.5%;
-  background-color: #abaaa7;
+  background-color: rgba(31, 46, 43, 1);
   z-index: 1002;
+}
+.receipt-back-text {
+  /* border: 1px solid black; */
+  position: absolute;
+  width: 100%;
+  height: 11%;
+  top: 40%;
+  left: 0%;
+  color: white;
+  font-family: galmuri9;
+  font-size: 160%;
+  z-index: 998;
 }
 .receipt-Img {
   height: 100%;
