Feat: 클릭해서 넘어가기 p태그 추가 console.log 주석처리

--- a/FE/front/src/components/battle/battleDialog.css
+++ b/FE/front/src/components/battle/battleDialog.css
@@ -26,7 +26,11 @@
   font-family: galmuri9;
   font-size: large;
 }
-.battle-dialog-start {
+.battle-dialog-next {
+  position: absolute;
+  top: 75%;
+  left: 8%;
+  font-size: 90%;
   /* border: 1px black solid; */
 }
 
