--- a/FE/front/src/pages/ReceiptPage.css
+++ b/FE/front/src/pages/ReceiptPage.css
@@ -138,6 +138,14 @@
   font-size: 150%;
 }
 
+.receipt-text-next {
+  position: absolute;
+  top: 85%;
+  left: 45%;
+  font-size: 90%;
+  /* border: 1px black solid; */
+}
+
 .receipt-text-main-total2 {
   /* border: 1px red solid; */
   margin-top: 0%;
