--- a/FE/front/src/pages/MainPage.css
+++ b/FE/front/src/pages/MainPage.css
@@ -195,12 +195,11 @@
 .main-board-modal-wrap {
   display: none;
   position: absolute;
-  top: 60%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 200px;
-  padding: 100%;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   z-index: 1500;
   color: #ee3131;
   font-size: 4rem;
@@ -212,7 +211,26 @@
   animation-delay: 0.5s; /* to start the animation with a delay of 1s */
   animation-direction: alternate; /* to alternate the animation direction */
   background-color: white; /* to blur the background */
+  text-align: center;
 }
+
+.main-board-modal-wrap span {
+  display: block;
+}
+
+.main-board-modal-wrap span:first-of-type {
+  margin-top: 35%;
+  font-size: 10vw;
+}
+
+.main-board-modal-wrap span:nth-of-type(2) {
+  font-size: 12vw;
+}
+
+.main-board-modal-wrap span:last-of-type {
+  font-size: 30vw;
+}
+
 
 @keyframes flicker {
   0% {
